--- a/blog/templates/blog/login.html
+++ b/blog/templates/blog/login.html
@@ -18,14 +18,16 @@
                 <!-- Username Input -->
                 <div>
                     <label for="username" class="block text-gray-700 font-medium mb-2">Username</label>
-                    <input type="text" name="username"
-                        class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                        required />
+                    <input type="text"
+                           name="username"
+                           class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+                           required />
                 </div>
                 <!-- Password Input -->
                 <div>
                     <label for="password" class="block text-gray-700 font-medium mb-2">Password</label>
-                    <input type="password" name="password"
+                    <input type="password"
+                           name="password"
                            class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
                            required />
                 </div>
