--- a/blog/templates/blog/signup.html
+++ b/blog/templates/blog/signup.html
@@ -18,23 +18,24 @@
                 <!-- Username Input -->
                 <div>
                     <label for="username" class="block text-gray-700 font-medium mb-2">Username</label>
-                    <input type="text" name="username"
-                        class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                        required />
+                    <input type="text"
+                           name="username"
+                           class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+                           required />
                 </div>
                 <!-- Password1 Input -->
                 <div>
                     <label for="password" class="block text-gray-700 font-medium mb-2">Password</label>
-                    <input type="password" name="password1"
-                           class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                           />
+                    <input type="password"
+                           name="password1"
+                           class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" />
                 </div>
                 <!-- Password2 Input -->
                 <div>
                     <label for="password" class="block text-gray-700 font-medium mb-2">Password</label>
-                    <input type="password" name="password2"
-                           class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                           />
+                    <input type="password"
+                           name="password2"
+                           class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" />
                 </div>
                 <!-- Submit Button -->
                 <div>
