--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -19,11 +19,10 @@
                     <a href="{% url 'posts' %}" class="text-gray-700 hover:text-blue-600">Posts</a>
                     <div class="space-x-4">
                         <a href="{% url 'signup' %}"
-                          class="bg-gray-200 text-gray-800 px-4 py-2 rounded-md hover:bg-gray-300 transition duration-300">Sign Up</a>
+                           class="bg-gray-200 text-gray-800 px-4 py-2 rounded-md hover:bg-gray-300 transition duration-300">Sign Up</a>
                         <a href="{% url 'login' %}"
-                          class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700 transition duration-300">Login</a>
-                        {% comment %} <a href="#"
-                           class="bg-red-600 text-white px-4 py-2 rounded-md hover:bg-red-700 transition duration-300">Logout</a> {% endcomment %}
+                           class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700 transition duration-300">Login</a>
+                        {% comment %} <a href="#" class="bg-red-600 text-white px-4 py-2 rounded-md hover:bg-red-700 transition duration-300">Logout</a> {% endcomment %}
                     </div>
                 </nav>
                 <!-- Mobile Menu Button -->
