--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,8 +2,8 @@
 {% block content %}
         <!-- Blog Post Detail Section -->
         <main class="py-12 bg-gray-100">
-            <div class="container mx-auto px-4 flex justify-start">
-                <div class="w-full md:w-3/4 lg:w-2/3">
+            <div class="container mx-auto px-4">
+                <div class="mx-auto w-full md:w-3/4 lg:w-2/3">
                     <!-- Post Header -->
                     <div class="mb-8">
                         <h1 class="text-4xl font-bold text-gray-800 mb-4">{{ post.title }}</h1>
