--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -22,7 +22,7 @@
                     {% endif %}
                     <div class="space-x-4">
                         {% if request.user.is_authenticated %}
-                            <a href="#"
+                            <a href="{% url 'logout' %}"
                                class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700 transition duration-300">Logout</a>
                         {% else %}
                             <a href="{% url 'signup' %}"
