--- a/blog/templates/blog/posts.html
+++ b/blog/templates/blog/posts.html
@@ -6,19 +6,18 @@
             <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">All Posts</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Post 1 -->
-                 {% for post in posts %}
-                <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                    <img src="{{ post.cover }}"
-                         alt="Post Image"
-                         class="w-full h-48 object-cover" />
-                    <div class="p-4">
-                        <h3 class="text-xl font-bold text-gray-800 mb-2">{{ post.title }}</h3>
-                        <p class="text-gray-600 mb-4">
-                            {{ post.body|truncatechars:90 }}
-                        </p>
-                        <a href="{% url 'post_detail' post.id %}" class="text-blue-600 hover:underline font-medium">Read More</a>
+                {% for post in posts %}
+                    <div class="bg-white rounded-lg shadow-md overflow-hidden">
+                        <img src="{{ post.cover }}"
+                             alt="Post Image"
+                             class="w-full h-48 object-cover" />
+                        <div class="p-4">
+                            <h3 class="text-xl font-bold text-gray-800 mb-2">{{ post.title }}</h3>
+                            <p class="text-gray-600 mb-4">{{ post.body|truncatechars:90 }}</p>
+                            <a href="{% url 'post_detail' post.id %}"
+                               class="text-blue-600 hover:underline font-medium">Read More</a>
+                        </div>
                     </div>
-                </div>
                 {% endfor %}
             </div>
         </div>
