--- a/blog/templates/blog/signup.html
+++ b/blog/templates/blog/signup.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Login Page</title>
-        <!-- Tailwind CSS CDN -->
-        <script src="https://cdn.tailwindcss.com"></script>
-    </head>
-    <body class="bg-gray-100 flex items-center justify-center min-h-screen">
+{% extends "blog/base.html" %}
+{% block content %}
+    <div class="flex items-center justify-center min-h-screen">
         <!-- Login Container -->
         <div class="bg-white shadow-md rounded-lg p-8 max-w-sm w-full space-y-6">
             <!-- Title -->
@@ -23,19 +16,21 @@
                            class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
                            required />
                 </div>
-                <!-- Password1 Input -->
+                <!-- Password Input -->
                 <div>
                     <label for="password" class="block text-gray-700 font-medium mb-2">Password</label>
                     <input type="password"
                            name="password1"
-                           class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" />
+                           class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+                           required />
                 </div>
-                <!-- Password2 Input -->
+                <!-- Password Confirmation -->
                 <div>
-                    <label for="password" class="block text-gray-700 font-medium mb-2">Password</label>
+                    <label for="password" class="block text-gray-700 font-medium mb-2">Password Confirmation</label>
                     <input type="password"
                            name="password2"
-                           class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" />
+                           class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+                           required />
                 </div>
                 <!-- Submit Button -->
                 <div>
@@ -52,5 +47,5 @@
                 </p>
             </div>
         </div>
-    </body>
-</html>
+    </div>
+{% endblock content %}
