fixed published on

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -9,7 +9,7 @@
                     <h1 class="text-4xl font-bold text-gray-800 mb-4">{{ post.title }}</h1>
                     <p class="text-gray-600">
                         Published on
-                        <span class="font-medium">{{ post.published_date }}</span>
+                        <span class="font-medium">{{ post.created_at }}</span>
                         by
                         <span class="font-medium text-blue-600 hover:underline">{{ post.published_by }}</span>
                     </p>
