--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,5 +1,6 @@
 {% extends "blog/base.html" %}
 {% block content %}
+    {% include 'blog/navbar.html' %}
     <!-- Hero Section -->
     <section class="bg-white py-12">
         <div class="container mx-auto px-4 text-center">
@@ -36,4 +37,5 @@
             </div>
         </div>
     </section>
+    {% include 'blog/footer.html' %}
 {% endblock content %}
