--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,5 +1,6 @@
 {% extends "blog/base.html" %}
 {% block content %}
+    {% include 'blog/navbar.html' %}
     <!-- Blog Post Detail Section -->
     <main class="py-12 bg-gray-100">
         <div class="container mx-auto px-4">
@@ -27,4 +28,5 @@
             </div>
         </div>
     </main>
+    {% include 'blog/footer.html' %}
 {% endblock content %}
