--- a/blog/templates/blog/signup.html
+++ b/blog/templates/blog/signup.html
@@ -9,16 +9,12 @@
             <!-- Form -->
             <form action="#" method="POST" class="space-y-4">
                 {% csrf_token %}
-
                 <!-- Non-Field Errors -->
                 {% if form.non_field_errors %}
                     <div class="text-red-500 text-sm">
-                        {% for error in form.non_field_errors %}
-                            <p>{{ error }}</p>
-                        {% endfor %}
+                        {% for error in form.non_field_errors %}<p>{{ error }}</p>{% endfor %}
                     </div>
                 {% endif %}
-
                 <!-- Username Input -->
                 <div>
                     <label for="username" class="block text-gray-700 font-medium mb-2">Username</label>
@@ -29,13 +25,10 @@
                            required />
                     {% if form.username.errors %}
                         <p class="text-red-500 text-sm">
-                            {% for error in form.username.errors %}
-                                {{ error }}
-                            {% endfor %}
+                            {% for error in form.username.errors %}{{ error }}{% endfor %}
                         </p>
                     {% endif %}
                 </div>
-
                 <!-- Password Input -->
                 <div>
                     <label for="password" class="block text-gray-700 font-medium mb-2">Password</label>
@@ -45,13 +38,10 @@
                            required />
                     {% if form.password1.errors %}
                         <p class="text-red-500 text-sm">
-                            {% for error in form.password1.errors %}
-                                {{ error }}
-                            {% endfor %}
+                            {% for error in form.password1.errors %}{{ error }}{% endfor %}
                         </p>
                     {% endif %}
                 </div>
-
                 <!-- Password Confirmation -->
                 <div>
                     <label for="password" class="block text-gray-700 font-medium mb-2">Password Confirmation</label>
@@ -61,13 +51,10 @@
                            required />
                     {% if form.password2.errors %}
                         <p class="text-red-500 text-sm">
-                            {% for error in form.password2.errors %}
-                                {{ error }}
-                            {% endfor %}
+                            {% for error in form.password2.errors %}{{ error }}{% endfor %}
                         </p>
                     {% endif %}
                 </div>
-
                 <!-- Submit Button -->
                 <div>
                     <button type="submit"
