--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -18,7 +18,7 @@
     <!-- Blog Post Highlights -->
     <section id="latest" class="py-12 bg-gray-100">
         <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Latest Blog Posts</h2>
+            <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Latest Posts</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Post 1 -->
                 {% for post in posts %}
