--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -1,5 +1,5 @@
 <!-- Header Section -->
-<header class="bg-white shadow-md">
+<header class="bg-white">
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
         <!-- Logo -->
         <a href="{% url 'home' %}" class="text-2xl font-bold text-gray-800">Blog</a>
