--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,3 +1,4 @@
+{% load static tailwind_tags %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -5,7 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Blog</title>
         <!-- Tailwind CSS CDN -->
-        <script src="https://cdn.tailwindcss.com"></script>
+        {% tailwind_css %}
+        {% comment %} <script src="https://cdn.tailwindcss.com"></script> {% endcomment %}
     </head>
     <body class="bg-gray-100">
         {% block content %}
