--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -23,7 +23,7 @@
                 <!-- Post 1 -->
                 {% for post in posts %}
                     <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                        <img src="{{ post.cover }}"
+                        <img src="{{ post.cover.url }}"
                              alt="Post Image"
                              class="w-full h-48 object-cover" />
                         <div class="p-4">
