--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -17,7 +17,7 @@
                 </section>
                 <!-- Post Image -->
                 <div class="mb-10">
-                    <img src="{{ post.cover }}"
+                    <img src="{{ post.cover.url }}"
                          alt="Blog Post Image"
                          class="w-full h-96 object-cover rounded-lg shadow-lg" />
                 </div>
