--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -7,7 +7,9 @@
         <nav class="hidden md:flex space-x-6 items-center">
             {% if request.user.is_authenticated %}
                 <a href="{% url 'home' %}" class="text-gray-700 hover:text-blue-600">Home</a>
+                <a href="{% url 'about' %}" class="text-gray-700 hover:text-blue-600">About</a>
                 <a href="{% url 'posts' %}" class="text-gray-700 hover:text-blue-600">Posts</a>
+                <a href="{% url 'contact' %}" class="text-gray-700 hover:text-blue-600">Contact</a>
             {% endif %}
             <div class="space-x-4">
                 {% if request.user.is_authenticated %}
