--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -27,10 +27,13 @@
                 </article>
                 <div class="mt-10 flex justify-center space-x-4">
                     {% if post.published_by == user %}
-                        <a href="{% url 'update' post.id %}" class="px-4 py-2 bg-blue-500 text-white font-semibold rounded hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-300">Update</a>
-                        <a href="{% url 'delete' post.id %}" class="px-4 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600 focus:outline-none focus:ring-2 focus:ring-red-300">Delete</a>
+                        <a href="{% url 'update' post.id %}"
+                           class="px-4 py-2 bg-blue-500 text-white font-semibold rounded hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-300">Update</a>
+                        <a href="{% url 'delete' post.id %}"
+                           class="px-4 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600 focus:outline-none focus:ring-2 focus:ring-red-300">Delete</a>
                     {% endif %}
-                    <a href="{% url 'home' %}" class="px-4 py-2 bg-gray-800 text-white font-semibold rounded hover:bg-gray-900 focus:outline-none focus:ring-2 focus:ring-gray-600">Back</a>    
+                    <a href="{% url 'home' %}"
+                       class="px-4 py-2 bg-gray-800 text-white font-semibold rounded hover:bg-gray-900 focus:outline-none focus:ring-2 focus:ring-gray-600">Back</a>
                 </div>
             </div>
         </div>
