--- a/blog/templates/blog/footer.html
+++ b/blog/templates/blog/footer.html
@@ -6,18 +6,30 @@
                 <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Blog</span>
             </a>
             <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400">
+                {% if request.user.is_authenticated %}
                 <li>
-                    <a href="#" class="hover:underline me-4 md:me-6">About</a>
+                    <a href="{% url 'home' %}" class="hover:underline me-4 md:me-6">Home</a>
                 </li>
                 <li>
-                    <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
+                    <a href="{% url 'about' %}" class="hover:underline me-4 md:me-6">About</a>
                 </li>
                 <li>
-                    <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
+                    <a href="{% url 'posts' %}" class="hover:underline me-4 md:me-6">Posts</a>
                 </li>
                 <li>
-                    <a href="#" class="hover:underline">Contact</a>
+                    <a href="{% url 'contact' %}" class="hover:underline">Contact</a>
                 </li>
+                {% else %}
+                <li>
+                    <a href="{% url 'home' %}" class="hover:underline me-4 md:me-6">Home</a>
+                </li>
+                <li>
+                    <a href="{% url 'about' %}" class="hover:underline me-4 md:me-6">About</a>
+                </li>
+                <li>
+                    <a href="{% url 'contact' %}" class="hover:underline">Contact</a>
+                </li>
+                {% endif %}
             </ul>
         </div>
         <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
