published by fix

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -12,7 +12,7 @@
                         Published on
                         <span class="font-semibold">{{ post.created_at }}</span>
                         by
-                        <a href="#" class="font-semibold text-blue-600 hover:underline">{{ post.published_by }}</a>
+                        <span href="#" class="font-semibold text-blue-600">{{ post.published_by }}</span>
                     </p>
                 </section>
                 <!-- Post Image -->
